remove overflow property on root - sticky fix

--- a/src/assets/scss/core/layout/_main.scss
+++ b/src/assets/scss/core/layout/_main.scss
@@ -21,11 +21,12 @@
 
 .body-wrap {
 	position: relative;
-    overflow: hidden;
+    // overflow: hidden;
     // Sticky footer
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+	height: 900vh;
 }
 
 .site-content {
